--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 html {
     height: 100%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -25,20 +26,57 @@ body {
     justify-content: center;
 }
 
-.cell-value{
+button {
     cursor: pointer;
-    height: 90px;
-    width: 90px;
     padding: 0;
     margin: 0;
     border: none;
 }
 
+.cell {
+    height: 90px;
+    width: 90px;
+}
+
+.blue{
+    background-color: rgb(140, 140, 255);
+    color: blue;
+    font-weight: bold;
+    font-size: 1em;
+}
+
+.red{
+    background-color: rgb(255, 140, 140);
+    color: red;
+    font-weight: bold;
+    font-size: 1em;
+}
+
 #display {
     background-color: rgb(225, 228, 235);
-    width: 310px;
-    height: 100px;
+    width: 270px;
+    height: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 20px;
+    text-align: center;
+}
+
+#reset-button {
+    height: 30px;
+    width: 90px;
+    box-shadow: 3px 3px 3px #000;
+}
+
+#reset-button:active {
+    box-shadow: 1px 1px 1px #303030;
+}
+
+#game-over-display {
+    height: 50px;
+}
+
+#button-container{
+    height: 50px;
 }
